fix: Wrap content in `main` landmark

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-/* .page {
-  max-width: 1440px;
-  margin: auto;
-} */
+
 
 /* ? How to apply background image without stretching it */
 .backgroundWrapper {
